// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <Img> with isLoaded prop 1`] = `
<styled.div
  blur={2}
  isLoaded={true}
  opacity={0.9}
  scale={1}
  style={
    Object {
      "backgroundImage": "url(\\"image.jpg\\")",
    }
  }
/>
`;

exports[`should render <Img> without isLoaded prop 1`] = `
<styled.div
  blur={2}
  isLoaded={false}
  opacity={0.9}
  scale={1}
  style={
    Object {
      "backgroundImage": "url(\\"image.jpg\\")",
    }
  }
/>
`;
